--- a/iOS/APIExample/Examples/Basic/JoinChannelAudio/Base.lproj/JoinChannelAudio.storyboard
+++ b/iOS/APIExample/Examples/Basic/JoinChannelAudio/Base.lproj/JoinChannelAudio.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,15 +26,23 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kbN-ZR-nNn" userLabel="joinBtn">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kbN-ZR-nNn" userLabel="joinBtn">
                                         <rect key="frame" x="172" y="74" width="30" height="30"/>
                                         <state key="normal" title="Join"/>
                                         <connections>
                                             <action selector="doJoinPressedWithSender:" destination="O0d-ef-mTa" eventType="touchUpInside" id="pdy-Tj-ycl"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dF6-52-aMS" userLabel="playBtn">
+                                        <rect key="frame" x="172" y="108" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Play"/>
+                                        <connections>
+                                            <action selector="doPlayPressedWithSender:" destination="O0d-ef-mTa" eventType="touchUpInside" id="x9w-ae-WCs"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="kbN-ZR-nNn" firstAttribute="centerX" secondItem="GWc-L5-fZV" secondAttribute="centerX" id="B5x-LS-GFH"/>
                                     <constraint firstItem="kbN-ZR-nNn" firstAttribute="top" secondItem="GWc-L5-fZV" secondAttribute="bottom" constant="20" id="LVQ-Cs-yOU"/>
@@ -53,12 +62,12 @@
                                 <rect key="frame" x="57.5" y="215.5" width="299" height="44"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Scenario" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0E-5B-IED" userLabel="Audio Scenario">
-                                        <rect key="frame" x="0.0" y="11.5" width="115.5" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="11.5" width="114.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="videoPlaceholder"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="myR-6e-1zj">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="myR-6e-1zj">
                                         <rect key="frame" x="253" y="7" width="46" height="30"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
@@ -83,7 +92,7 @@
                                         <color key="textColor" name="videoPlaceholder"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZP-Ce-Oxt">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZP-Ce-Oxt">
                                         <rect key="frame" x="253" y="7" width="46" height="30"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
@@ -100,7 +109,8 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="wDs-Gr-g1S"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="QIl-UK-Ssb" firstAttribute="bottom" secondItem="UzG-zY-iSA" secondAttribute="top" id="1U0-JU-vzD"/>
                             <constraint firstItem="UzG-zY-iSA" firstAttribute="centerY" secondItem="wDs-Gr-g1S" secondAttribute="centerY" multiplier="0.8" id="8bT-wH-NDK"/>
@@ -115,11 +125,11 @@
                             <constraint firstItem="rn1-Lz-WLl" firstAttribute="centerX" secondItem="wDs-Gr-g1S" secondAttribute="centerX" id="wvz-mf-VUr"/>
                             <constraint firstItem="rn1-Lz-WLl" firstAttribute="bottom" secondItem="UzG-zY-iSA" secondAttribute="top" constant="10" id="zJR-vo-JZd"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="wDs-Gr-g1S"/>
                     </view>
                     <connections>
                         <outlet property="channelTextField" destination="GWc-L5-fZV" id="xDy-ai-JdS"/>
                         <outlet property="joinButton" destination="kbN-ZR-nNn" id="kkw-5w-Nnv"/>
+                        <outlet property="playButton" destination="dF6-52-aMS" id="VMz-bL-xjS"/>
                         <outlet property="profileBtn" destination="iZP-Ce-Oxt" id="Q2j-hX-rLd"/>
                         <outlet property="scenarioBtn" destination="myR-6e-1zj" id="NBz-9v-P8Q"/>
                     </connections>
@@ -138,7 +148,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSr-Z8-XSr" customClass="AGEVideoContainer" customModule="AGEVideoLayout">
                                 <rect key="frame" x="0.0" y="44" width="414" height="540"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bpO-Je-BwP" userLabel="adjustRecordingSignalVolume">
                                 <rect key="frame" x="0.0" y="594" width="414" height="48"/>
@@ -156,7 +166,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="K3u-bf-uaw" firstAttribute="leading" secondItem="DJt-Y7-fkM" secondAttribute="trailing" constant="20" id="33v-QA-Kgd"/>
                                     <constraint firstItem="DJt-Y7-fkM" firstAttribute="leading" secondItem="bpO-Je-BwP" secondAttribute="leading" constant="20" id="87k-UJ-nX5"/>
@@ -183,7 +193,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="sCB-IW-Q8u" firstAttribute="width" secondItem="Rjn-1J-hHR" secondAttribute="width" multiplier="0.3" id="5WQ-75-K2C"/>
                                     <constraint firstItem="07c-He-s8j" firstAttribute="centerY" secondItem="sCB-IW-Q8u" secondAttribute="centerY" id="93a-qM-wPe"/>
@@ -210,7 +220,7 @@
                                         </connections>
                                     </switch>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="iru-5f-bbo" firstAttribute="centerY" secondItem="GY1-XL-g0X" secondAttribute="centerY" id="03G-Kt-Ean"/>
                                     <constraint firstItem="iru-5f-bbo" firstAttribute="leading" secondItem="GY1-XL-g0X" secondAttribute="leading" constant="20" id="Fan-9P-jyX"/>
@@ -235,7 +245,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="4fm-rd-x2n" firstAttribute="width" secondItem="pHj-Bj-PTD" secondAttribute="width" multiplier="0.3" id="0Ct-7I-U4S"/>
                                     <constraint firstItem="4fm-rd-x2n" firstAttribute="leading" secondItem="VMe-lv-SUb" secondAttribute="trailing" constant="20" id="1d7-Cu-lSV"/>
@@ -247,7 +257,8 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="CeS-QQ-Djo"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="pHj-Bj-PTD" firstAttribute="leading" secondItem="bpO-Je-BwP" secondAttribute="leading" id="Ejx-3p-Tir"/>
                             <constraint firstItem="GY1-XL-g0X" firstAttribute="leading" secondItem="bpO-Je-BwP" secondAttribute="leading" id="FTe-hM-YV2"/>
@@ -266,7 +277,6 @@
                             <constraint firstItem="bpO-Je-BwP" firstAttribute="leading" secondItem="sSr-Z8-XSr" secondAttribute="leading" id="weT-6X-7xz"/>
                             <constraint firstItem="CeS-QQ-Djo" firstAttribute="trailing" secondItem="sSr-Z8-XSr" secondAttribute="trailing" id="xcd-jp-EOu"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="CeS-QQ-Djo"/>
                     </view>
                     <connections>
                         <outlet property="container" destination="sSr-Z8-XSr" id="dwX-Ts-bEN"/>
@@ -285,5 +295,8 @@
         <namedColor name="videoPlaceholder">
             <color red="0.47600001096725464" green="0.47600001096725464" blue="0.47600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
